
2017-04-26 Steven E. Pav <shabbychef@gmail.com>
* CRAN emergency release, version 0.2.2

2017-04-13 Steven E. Pav <shabbychef@gmail.com>
* CRAN emergency release, version 0.2.1

2014-02-14 Steven E. Pav <shabbychef@gmail.com>
* first release

2014-01-04 Steven E. Pav <shabbychef@gmail.com>
* start work
