@@ -2,8 +2,8 @@ Package: madness
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"),
     email="shabbychef@gmail.com"))
-Version: 0.2.2
-Date: 2017-04-25
+Version: 0.2.3
+Date: 2018-02-14
 License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
@@ -24,8 +24,10 @@ Suggests:
     knitr
 URL: https://github.com/shabbychef/madness
 VignetteBuilder: R.rsp
-Collate:
+Collate: 
     'AllClass.r'
+    'utils.r'
+    'Ops.r'
     'bind.r'
     'blockrep.r'
     'coerce.r'
@@ -38,7 +40,6 @@ Collate:
     'max.r'
     'norm.r'
     'numderiv.r'
-    'Ops.r'
     'reshape.r'
     'solve.r'
     'sum.r'
@@ -47,6 +48,6 @@ Collate:
     'to_objective.r'
     'trace.r'
     'twomoments.r'
-    'utils.r'
     'vcov.r'
     'vec.r'
+RoxygenNote: 6.0.1
