@@ -10,6 +10,14 @@ News for package \sQuote{madness}.
 \newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \newcommand{\madness}{\CRANpkg{madness}}
 }
+\section{\madness{} Version 0.2.3 (2018-02-14) }{
+
+\itemize{
+\item emergency CRAN release to deal with failing tests
+under alternative BLAS/LAPACK libraries.
+}
+}
+
 \section{\madness{} Version 0.2.2 (2017-04-26) }{
 
 \itemize{
