@@ -1,4 +1,8 @@
 
+2018-02-14 Steven E. Pav <shabbychef@gmail.com>
+* CRAN emergency release, version 0.2.3
+* dumb down tests for alternative BLAS/LAPACK libraries.
+
 2017-04-26 Steven E. Pav <shabbychef@gmail.com>
 * CRAN emergency release, version 0.2.2
 
